# controller

./: Cargo.toml  README.md  config.toml
assets/content_server/text/: index.html  poesia.txt  rust.txt
crates/controller_app/: Cargo.toml
crates/controller_app/src/: app.rs
crates/controller_data/: Cargo.toml
crates/controller_data/src/: data.rs
crates/controller_internal/: Cargo.toml
crates/controller_internal/src/: lib.rs
crates/controller_receiver_thread/: Cargo.toml
crates/controller_receiver_thread/src/: lib.rs  receiver_thread.rs
crates/controller_receiver_threads/: Cargo.toml
crates/controller_receiver_threads/src/: client_receiver_thread.rs  drone_receiver_thread.rs  helper.rs  lib.rs  receiver_threads.rs  server_receiver_thread.rs
crates/controller_receiver_threads/src/receiver_threads/: util.rs
src/: app.rs  custom_edge.rs  custom_node.rs  data.rs  main.rs  receiver_threads.rs  shared_data.rs  simulation_controller_ui.rs  ui_components.rs
src/app/: reset.rs  simulation_controller_ui.rs
src/receiver_threads/: client_receiver_thread.rs  drone_receiver_thread.rs  helper.rs  server_receiver_thread.rs
src/ui_components/: client_window.rs  custom_edge.rs  custom_node.rs  drone_window.rs  file_window.rs  logs.rs  server_window.rs  stats.rs  text.rs
