[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
infer = "0.19.0"
image = "0.25.5"
toml = "0.8.19"
crossbeam-channel = "0.5.13"
eframe = "0.30.0"
egui_graphs = "0.23.0"
petgraph = "0.6.5"
wg_2024 =  { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
drone-networks = { git = "https://github.com/Lockheed-Rustin/drone-network.git" }
lockheedrustin-drone = { git = "https://github.com/Lockheed-Rustin/drone.git" }


